# energy-exhibition

./: Dockerfile  README.md  compose.yaml  mqtt_subscriber.py  mqtt_utils.py  on_startup.sh  test_sensor_data.py
Untitled/publication-web-resources/css/: idGeneratedStyles.css
Untitled/publication-web-resources/html/: publication-1.html  publication-2.html  publication-3.html  publication.html
air_pressure/: Dockerfile  README.md  air_pressure_frontend.py  air_pressure_subscriber.py  exprimental_frontend.py  on_startup.sh  on_stratup.sh  package-lock.json  package.json
air_pressure/realtime-frontend/: package-lock.json  package.json
air_pressure/realtime-frontend/src/: App.css  App.js  texts.js
air_pressure/src/: App.js  serialReader.js  texts.js
data_forwarding/: Dockerfile  data_forwarder.py  requirements.txt  serial_data_forwarder.py  serial_to_websocket.py  virtual_serial_port.py
exhibitions/air-pressure/: on_startup.sh  package-lock.json  package.json
exhibitions/air-pressure/air_pressure_arduino/: Pressure.cpp  Pressure.h  air_pressure_arduino.ino  constants.h
exhibitions/air-pressure/src/: App.css  App.js  BaseApp.js  components.js  texts.js
exhibitions/base-app/: package-lock.json  package.json
exhibitions/base-app/src/: App.css  App.test.js  index.js
exhibitions/jumping-ring/: package-lock.json  package.json
exhibitions/jumping-ring/src/: App.css  App.js  components.js  texts.js  utils.js
serial_to_websocket/: Dockerfile  on_startup.sh  pyproject.toml  serial_to_websocket.py
